[gd_scene load_steps=11 format=3 uid="uid://bl0wpwdpgqv2e"]

[ext_resource type="Script" path="res://menus/MainMenu.gd" id="1_g8514"]
[ext_resource type="Texture2D" uid="uid://ch7vteblt1yrb" path="res://art/placeholder/MenuImagePlaceholder.jpg" id="2_7rebt"]
[ext_resource type="FontFile" uid="uid://b0hof85mkga7d" path="res://art/Playfulist-rgPp8.ttf" id="3_jeus4"]
[ext_resource type="Script" path="res://menus/LeaderboardPanel.gd" id="4_3aoqa"]
[ext_resource type="AudioStream" uid="uid://dmxqg357ljt0p" path="res://audio/sfx/menu/menu_scroll.wav" id="4_dlyhx"]
[ext_resource type="AudioStream" uid="uid://rodbeyob6u82" path="res://audio/sfx/drag_drop/error_sound.wav" id="6_2msp6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2csbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_teura"]
bg_color = Color(0, 0, 0, 0.25098)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2bo0a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43a2j"]
bg_color = Color(0, 0, 0, 0.25098)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_g8514")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1000.0
offset_bottom = 600.0
texture = ExtResource("2_7rebt")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.25098)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 27.0
offset_top = 65.0
offset_right = 466.0
offset_bottom = 157.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 72
text = "Florist King"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 27.0
offset_top = 181.0
offset_right = 421.0
offset_bottom = 551.0
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_2csbd")
theme_override_styles/hover = SubResource("StyleBoxFlat_teura")
text = " Play"
alignment = 0

[node name="Leaderboards" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_2bo0a")
theme_override_styles/hover = SubResource("StyleBoxFlat_43a2j")
text = " Leaderboards"
alignment = 0

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_2bo0a")
theme_override_styles/hover = SubResource("StyleBoxFlat_43a2j")
text = " Credits"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_2bo0a")
theme_override_styles/hover = SubResource("StyleBoxFlat_43a2j")
text = " Quit"
alignment = 0

[node name="Leaderboards@LeaderboardPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = -199.0
offset_right = 872.0
offset_bottom = 206.0
script = ExtResource("4_3aoqa")

[node name="Leaderboards@LeaderboardPanel@ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="Leaderboards@LeaderboardPanel@MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Leaderboards@LeaderboardPanel@MarginContainer@Panel" type="Panel" parent="."]

[node name="Leaderboards@LeaderboardPanel@MarginContainer@Panel@ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Leaderboards@LeaderboardPanel@MarginContainer@Panel@ScrollContainer@VBoxContainer2" type="VBoxContainer" parent="."]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="VBoxContainer@Credits@CreditsPanel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = -301.0
offset_right = 872.0
offset_bottom = 104.0

[node name="Credits@CreditsPanel@ColorRect3" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="Credits@CreditsPanel@Label2" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jeus4")
text = "Programmers:
Garett Skott, mel, Kuro, 
Dominic, Roddur

Artist:
eg

Music / SFX:
SerTune9, Jeg, 
ryanindoors

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameRegister" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="NameRegistering" type="Control" parent="NameRegister"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -500.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="NameRegister/NameRegistering"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 600.0
color = Color(0.258824, 0, 0.0352941, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="NameRegister/NameRegistering"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NameRegister/NameRegistering/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 250

[node name="LineEdit" type="LineEdit" parent="NameRegister/NameRegistering/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter your name"
alignment = 1
max_length = 30
caret_blink = true

[node name="TopMargin" type="MarginContainer" parent="NameRegister/NameRegistering/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="NameRegister/NameRegistering/VBoxContainer/TopMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackMargin" type="MarginContainer" parent="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="Back" type="Button" parent="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer/BackMargin"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 31
text = "Back
"

[node name="ContinueMargin" type="MarginContainer" parent="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="EnterName" type="Button" parent="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer/ContinueMargin"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_jeus4")
theme_override_font_sizes/font_size = 31
text = "Continue"

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dlyhx")

[node name="AudioWrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2msp6")

[connection signal="mouse_entered" from="VBoxContainer/Credits" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="button_up" from="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer/BackMargin/Back" to="." method="_on_back_button_up"]
[connection signal="mouse_entered" from="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer/BackMargin/Back" to="." method="_on_mouse_entered"]
[connection signal="button_up" from="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer/ContinueMargin/EnterName" to="." method="_on_enter_name_button_up"]
[connection signal="mouse_entered" from="NameRegister/NameRegistering/VBoxContainer/TopMargin/HBoxContainer/ContinueMargin/EnterName" to="." method="_on_mouse_entered"]
